--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -282,7 +282,7 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/Wheatfield.jpg) no-repeat center top;
+	background: url(../img/Wheatfield2.jpg) no-repeat center top;
 	margin-top: -20px;
 	padding-top:80px;
 	text-align:center;
@@ -313,7 +313,7 @@ a:link, a:visited {
     width: 170px;
     font-weight: bold;
     color: #99CCFF;
-    background-color: #FFFF66;
+    background-color: #FFFF33;
     text-align: center;
     padding: 8px;
     text-decoration: none;
