--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -313,7 +313,7 @@ a:link, a:visited {
     width: 170px;
     font-weight: bold;
     color: #99CCFF;
-    background-color: #FFFF33;
+    background-color: #A0A0A0;
     text-align: center;
     padding: 8px;
     text-decoration: none;
