--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -312,8 +312,8 @@ a:link, a:visited {
     display: block;
     width: 170px;
     font-weight: bold;
-    color: #99CCFF;
-    background-color: #A0A0A0;
+    color: #FAFAFA;
+    background-color: #707070;
     text-align: center;
     padding: 8px;
     text-decoration: none;
